fixed spacing issue when card layout is 4x4

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,9 +167,11 @@ padding: 1% 1%;
 }
 }
 
-@media (min-width: 540px) {
+@media (max-width: 1200px) {
+
   .project-column {
     /* margin: 10px; */
+padding: 1% 1%; 
   }
 }
 
